1. Completed tests and refactored methods using TDD approach. 2. Updated method calls in views to handle exceptions correctly from the service layer. 3. Refined entity annotations to ensure proper handling of table relationships during deletions and other operations.